java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/ImplicitWithPackages.java
import a.b.*;

<error descr="Reference to 'List' is ambiguous, both 'a.b.List' and 'java.util.List' match">List</error><caret> a;

void main() {
}